# gtm-mcp

./: .gitignore  ACCOUNT_RESTRICTION.md  ADC_IMPLEMENTATION.md  BUGFIX_SUMMARY.md  CHANGES.md  EXAMPLES.md  FEATURE_COMPARISON_MATRIX.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MISSING_TOOLS_ANALYSIS.md  MISSING_TOOLS_INDEX.md  MISSING_TOOLS_SUMMARY.md  PHASE1_COMPLETION_REPORT.md  PHASE1_IMPLEMENTATION.md  PROPOSED_ADDITIONS.md  PUBLISHING_CHECKLIST.md  PYPI_DEPLOYMENT.md  PYPI_QUICKREF.md  PYPI_SETUP_COMPLETE.md  README.md  VISUAL_SUMMARY.md  claude_config_examples.json  demo_phase1.py  dev-helper.sh  pyproject.toml  test_account_restriction.py  test_concurrent_version_calls.py  test_phase1.py  verify_installation.bat  verify_installation.ps1  verify_installation.sh
.github/workflows/: build-test.yml  publish-to-pypi.yml
src/gtm_mcp/: gtm_client.py  helpers.py  server.py  tools.py  utils.py
src/gtm_mcp/tests/: test_auth.py  test_constants.py  test_exceptions.py  test_helpers.py  test_triggers.py  test_validators.py
src/unboundai_gtm_mcp/: __init__.py  constants.py  exceptions.py  gtm_client.py  server.py  tools.py  utils.py  validators.py
src/unboundai_gtm_mcp/tests/: test_auth.py  test_constants.py  test_exceptions.py  test_helpers.py  test_triggers.py  test_validators.py
